# claimdone

./: .env.example  .gitignore  ACCIDENT_TO_CLAIM_AGENT_SPEC.md  AGENTS.md  BUILD_WEEK_DIARY.md  BUILD_WEEK_SPEC.md  CLAIMDONE_BUILD_WEEK_PLAN.md  CLAIMDONE_CURRENT_STATUS.md  CLAIMDONE_IMPLEMENTATION_TASKS.md  CLAIMDONE_MVP_TEST_AND_RESUME.md  HACKATHON_SUBMISSION.md  LICENSE  Makefile  README.md  SUBMISSION_CHECKLIST.md  buildweek-diary.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
services/api/: pyproject.toml
services/api/tests/: test_ai_core.py  test_ai_extraction.py  test_ai_provider.py  test_authority.py  test_case_api.py  test_case_persistence.py  test_case_service_portal_wrappers.py  test_computer_use_playwright.py  test_computer_use_policy.py  test_computer_use_provider.py  test_computer_use_runner.py  test_contract_eval_release.py  test_contract_examples.py  test_contract_generation.py  test_contract_models.py  test_contract_state_machine.py  test_contract_v2_surfaces.py  test_contract_v2_verification_eval.py  test_contract_v3_http_workflow.py  test_cu_verification_persistence.py  test_demo_analysis.py  test_gates_g2_g5.py  test_gates_g6_g7.py  test_gates_g8.py  test_health.py  test_int002_composition.py  test_int002_http.py  test_int002_portal_adapters.py  test_media_pipeline.py  test_observability.py  test_persistence_v3.py  test_production_routing.py  test_walking_skeleton.py  test_walking_skeleton_http.py  test_workflow_atomic.py  test_workflow_http.py  (+1 more)
(+278 files in other folders)
