[project]
name = "claimdone-api"
version = "0.0.0"
description = "ClaimDone FastAPI service shell"
requires-python = "==3.12.*"
dependencies = [
  "fastapi==0.139.0",
  "Pillow==12.3.0",
  "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "mypy==1.17.0",
  "pytest==8.4.1",
  "ruff==0.12.5",
]
