[project]
name = "claimdone-api"
version = "0.0.0"
description = "ClaimDone FastAPI service shell"
requires-python = "==3.12.*"
dependencies = [
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "openai==2.45.0",
  "Pillow==12.3.0",
  "playwright==1.61.0",
  "pydantic==2.13.4",
  "python-multipart==0.0.32",
  "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
  "mypy==1.17.0",
  "pytest==8.4.1",
  "ruff==0.12.5",
]
